--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,457 @@
-.App {
-  text-align: center;
+/* General Styles */
+body {
+  font: sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #f8f9fa;
+} 
+
+.landing-container {
+  width: 100%;
+  overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Navbar */
+.navbar {
+  margin-top: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  padding: 20px 40px;
+  background: white;
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.logo{
+  display: flex;
+  color: #0f90ca;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  gap: 80px;
+}
+
+.nav-links li {
+  cursor: pointer;
+  font-size: 16px;
+  color: #000000;
+}
+
+.nav-links li.active {
+  font-weight: bold;
+  color: #0f90ca;
+}
+
+.contact-btn {
+  background: #0f90ca;
+  color: white;
+  border: none;
+  padding: 1px 30px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 15px;
+}
+
+/* Hero Section */
+.section-one {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  background: #f8f9fa;
+}
+
+.section-one-text {
+  max-width: 50%;
+  padding-right: 200px;
+}
+
+.section-one-text h1 {
+  font-size: 48px;
+  color: #000000;
+  line-height: 1.5;
+}
+
+.highlight {
+  color: #0f90ca;
+}
+
+.section-one-text p {
+  font-size: 18px;
+  color: #666;
+  margin-top: 20px;
+  line-height: 2;
+}
+
+.section-one-buttons {
+  margin-top: 30px;
+}
+
+.primary-btn, .secondary-btn {
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-right: 15px;
+  font-size: 16px;
+}
+
+.primary-btn {
+  background: #0f90ca;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.secondary-btn {
+  background: white;
+  border: 1px solid #0f90ca;
+  color: #0f90ca;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section-one-image img {
+  max-width: 500px;
+  border-radius: 10px;
+}
+
+/* Features Section */
+.features-section {
+  display: flex;
+  justify-content: space-between;
+  padding: 80px 150px;
+  background: white;
+  margin-bottom: 200px;
+}
+
+.feature-item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  max-width: 100%;
+}
+
+.image-container {
+  width: 80px;
+  height: 80px; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 25%; 
+  padding: 10px; 
+}
+
+.feature-item img {
+  width: 40px;
+  height: 40px;
+}
+
+.feature-item h2 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.feature-item p {
+  font-size: 16px;
+  color: #888888;
+}
+
+.text-mid{
+  font-family: sans-serif;
+  text-align: center;
+  color: #000000;
+  font-size: 45px;
+  font-weight: bold;
+  margin-top: 200px;
+}
+
+.text-mid2{
+  font-family: sans-serif;
+  text-align: center;
+  color: #888888;
+  font-size: 25px;
+}
+
+
+/* Info Boxes */
+.info-boxes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding: 100px 100px;
+}
+
+.info-box.light {
+  display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+    max-width: 45%;
+}
+
+.info-box img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.mini-image {
+  background-color: #2bd3a9;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mini-image img {
+  width: 35px;
+  height: 35px;
+}
+
+.text-content {
+  font-family: sans-serif;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title {
+  font-family: sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+}
+
+.subtitle {
+  font-family: sans-serif;
+  font-size: 16px;
+  color: #888888;
+}
+
+.style-text {
+  font-family: sans-serif;
+  font-size: 40px;
+  line-height: 60px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.style-text2 {
+  font-family: sans-serif;
+  font-size: 20px;
+  line-height: 40px;
+  color: #666;
+  align-items: center;
+  justify-content: center;
+}
+
+
+/* Dual Boxes */
+.dual-boxes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 60px;
+  padding: 200px 200px;
+  background: white;
+}
+
+.box {
+  padding: 70px 150px;
+  border-radius: 25px;
+  text-align: center;
+}
+
+.light-box {
+  background: #f1f1f1;
+  color: #000000;
+}
+
+.light-box p {
+  text-align: center;
+  font-size: 22px;
+  color: #666;
+}
+
+.dark-box {
+  background: #0f90ca;
+  color: white;
+}
+
+.dark-box p {
+  text-align: center;
+  font-size: 22px;
+  color: #ffffff;
+}
+
+.box h3 {
+  font-family: sans-serif;
+  font-size: 34px;
+  line-height: 50px;
+}
+
+.light-box button {
+  padding: 25px 55px;
+  background: #0f90ca;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 15px;
+  font-size: 20px;
+}
+
+.dark-box button {
+  padding: 20px 55px;
+  background: #ffffff;
+  color: #0f90ca;
+  border: none;
+  cursor: pointer;
+  border-radius: 15px;
+  font-size: 20px;
+}
+
+
+/* Partners Section */
+.partners-section {
+  text-align: center;
+  padding: 80px 40px;
+}
+
+.partners-section h2 {
+  font-size: 36px;
+  color: #333;
+  margin-bottom: 40px;
+}
+
+.partners-logos {
+  display: flex;
+  justify-content: center;
+  gap: 160px;
+  flex-wrap: wrap;
+}
+
+.partners-logos img {
+  width: 200px;
+}
+
+
+/* Newsletter Section */
+.newsletter-section {
+  text-align: center;
+  padding: 50px 20px;
+  background: #EAF6FA;
+}
+
+.newsletter-section h3 {
+  font-size: 40px;
+  color: #333;
+  font-weight: bold;
+}
+
+.newsletter-input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.newsletter-input input {
+  padding: 28px;
+  width: 500px;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.newsletter-input button {
+  padding: 28px 50px;
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+
+/* Footer */
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 60px 100px;
+  background: white;
+  color: black;
+  margin-top: 50px;
+}
+
+.footer-column {
+  max-width: 250px;
+}
+
+.footer-logo {
+  font-size: 22px;
+  font-weight: bold;
+  color: #0761aa;
+  margin-bottom: 15px;
+}
+
+.footer-column h4 {
+  font-family: sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+  color: #000000;
+}
+
+.footer-column p {
+  font-family: sans-serif;
+  margin: 5px 0;
+  font-size: 20px;
+  color: #666;
+  line-height: 30px;
+  cursor: pointer;
+}
+
+/* Social Media Icons */
+.social-icons {
+  display: flex;
+  gap: 15px;
+}
+
+.social-icons img {
+  background-color: #ffffff;
+  border-radius: 50%;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+  width: 20px; 
+  height: 20px;
+  padding: 8px;
+  cursor: pointer;
+  object-fit: contain;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.footer-bottom {
+  text-align: center;
+  padding: 22px;
+  font-size: 14px;
+  color: #666;
+  border-top: 1px solid #ddd;
 }
